<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj"
    tools:context="com.yongyida.robot.qrcode.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_dev"
            android:textColor="@color/bg_item_blue"
            android:id="@+id/tishi_tv" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_btn"
        android:background="@drawable/bg_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_dev"
                android:textColor="@color/bg_item_blue"
                android:id="@+id/scan_tv" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:singleLine="true"
                android:text="@string/str_id"
                android:textColor="@color/bg_item_red"
                android:id="@+id/create_qr_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:singleLine="true"
                android:text="@string/str_sid"
                android:textColor="@color/bg_item_red"
                android:id="@+id/create_qr_content2"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/bindQrcode_dev"
                android:textColor="@color/bg_item_red"
                android:id="@+id/create_qr_cdKeyword"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/download_qr_iv"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/create_qr_iv"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>